2014-10-16  David B. Lamkins  <david@lamkins.net>

	* complete.c: Improve completion function's wraparound logic. Fix
	completion function's origin-dependence.

	* complete.c: Completion function handles empty completion list.

2014-10-15  David B. Lamkins  <david@lamkins.net>

	* pstat.h (): Pstat window is now accessed via Help menu and
	retains appearance when not in front.

	* menu.c (settings_cb): Pstat window is now accessed via Help menu
	and retains appearance when not in front.

	* help.c (help_menu): Pstat window is now accessed via Help menu
	and retains appearance when not in front.

	* pstat.c (pstat_destroy, show_pstat): Pstat window is now
	accessed via Help menu and retains appearance when not in front.

2014-10-14  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c (delete_uncommitted_input, key_press_event): Bind
	Alt-Delete to delete uncommitted input.

2014-10-13  David B. Lamkins  <david@lamkins.net>

	* help.c (show_manuals): Manuals window is the same size as other
	APLwrap windows.

	* edit.h (): Offer to save dirty file edit buffers while quitting.

	* apl.h (): Offer to save dirty file edit buffers while quitting.

	* edit.c (edit_delete_real, check_modified_and_save)
	(save_dirty_edit_buffers): Offer to save dirty file edit buffers
	while quitting.

	* apl.c (is_quitting, aplwrap_quit): Offer to save dirty file edit
	buffers while quitting.

2014-10-12  David B. Lamkins  <david@lamkins.net>

	* edit.c (update_status, set_status_line, edit_close): Fix crash
	when closing edit window.

	* edit.h (): When saving a buffer under a different name, existing
	buffers with that name adopt the new content.

	* edit.c (set_status_line, update_name_and_status)
	(edit_save_object_cb, edit_save_file_as, edit_object, edit_file):
	When saving a buffer under a different name, existing buffers with
	that name adopt the new content.

	* apl.c (aplwrap_quit): For now, disable the dirty-buffer check on
	exit.
