@@ -18,6 +18,7 @@ gchar *new_fn = NULL;
 gchar *opt_lx = NULL;
 gchar *rows_v = NULL;
 gchar *script = NULL;
+gchar *shortcuts_file = NULL;
 
 GOptionEntry entries[] = {
   { "ftsize", 's', 0, G_OPTION_ARG_INT,
@@ -51,6 +52,10 @@ GOptionEntry entries[] = {
   { "rows-var", 0, 0, G_OPTION_ARG_STRING,
     &rows_v,
     "APL variable name for display row count [string]",
+    NULL },
+  { "shortcuts", 0, 0, G_OPTION_ARG_STRING,
+    &shortcuts_file,
+    "file chooser directory shortcuts file [path]",
     NULL },
   { "file", 'f', 0, G_OPTION_ARG_STRING,
     &script,
