@@ -1,5 +1,15 @@
 2014-10-16  David B. Lamkins  <david@lamkins.net>
 
+	* options.h: Add --shortcuts command-line option.
+
+	* menu.h: Add --shortcuts command-line option.
+
+	* options.c: Add --shortcuts command-line option.
+
+	* menu.c (init_shortcuts): Add --shortcuts command-line option.
+
+	* aplwrap.c (main): Add --shortcuts command-line option.
+
 	* complete.c: Improve completion function's wraparound logic. Fix
 	completion function's origin-dependence.
 
